[package]
name = "aqua3d"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
bytemuck = { version = "1.20.0", features = ["derive"] }
flume = "0.11.1"
ndarray = "0.16.1"
thiserror = "2.0.7"
wgpu = { version = "23.0.1", features = ["spirv"] }

[dev-dependencies]
ndarray-npy = "0.9.1"
tokio = { version = "1.42.0", features = ["rt", "macros"] }

[build-dependencies]
chrono = { version = "0.4.39", features = ["serde"] }
glob = "0.3.2"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.42.0", features = ["rt", "rt-multi-thread", "macros"] }
