[package]
name = "aqua3d"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
bytemuck = { version = "1.20.0", features = ["derive"] }
flume = "0.11.1"
ndarray = "0.16.1"
thiserror = "2.0.7"
wgpu = "23.0.1"

[dev-dependencies]
ndarray-npy = "0.9.1"
tokio = { version = "1.42.0", features = ["rt", "macros"] }
